--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     max-width: 420px;
     margin: 1em;
+    text-align: center;
 }
 
 .search {
@@ -26,23 +27,37 @@ body {
 
 button {
     margin: 0.5em;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
 }
 
 input.search-bar {
     padding: 0.8em;
     border: none;
     outline: none;
-    border-radius: 5px;
+    border-radius: 10px;
     font-family: 'Open Sans';
     font-size: 100%;
+    width: 100%;
+    height: 20px;
 }
 
 button:hover {
     background-color: #70797e;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+}
+
+.description {
+    text-transform: capitalize;
+}
+
+.temp {
+    font-size: 5em;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 0;
 }
