--- a/style.css
+++ b/style.css
@@ -61,3 +61,13 @@ button:hover {
     margin-bottom: 0;
     margin-top: 0;
 }
+
+.weather.loading {
+    visibility: hidden;
+}
+
+.weather.loading:after {
+    visibility: visible;
+    content: "Loading...";
+    color: white;
+}
